docs/css/styles.css
html, body {
  font-family: Fira Sans, sans-serrif;
  margin: 0;
  padding: 0;
  background-color: #F6F6F6;
}

a {
  color: #0052A6;
}

html {
  height: 100vh;
  width: 100vw;
}

#chk1 {
  display: none;
}

.video-container {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
}

.demo {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  border: none;
}

nav label {
  display:none;
}

.proposal {
  max-height: 40rem;
  padding-left: 1rem;
  padding-right: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: baseline;
  text-decoration: none;
  color: black;
  background-color: #D7DBE0;
  border: 0.0625rem solid #A5B0BD;
  border-radius: 0.6rem;
  padding-bottom: 1rem;
}

.proposal:hover {
  background-color: #CDD2D7;

}

.proposal:active {
  background-color: #C6CBD0;
}

.proposal h2 {
  margin: 0;
  margin-bottom: 1rem;
  border-bottom: 0.0625rem solid #A5B0BD;
  width: 100%;
  text-align: center;
  padding: 1rem;
}

.proposals {
  margin: 2rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 2rem;
}


.proposal img {
  margin: auto;
  max-width: 100%;
  border: 0.0625rem solid #A5B0BD;
  max-height: 30rem;
}

nav {
  width: 100vw;
  margin: 0;
  box-sizing: border-box;
  padding-left:0.5rem;
  padding-right:0.5rem;
  display: grid;
  grid-template-columns: 1fr 2fr;
  background-color: #D7EAFD;
  position: fixed;
  top:0;
  border-bottom: 0.0625rem solid #B1D5F9;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

#screenshot {
  display: flex;
  align-items: center;
  justify-content: center;
  padding:2rem;
}

#screenshot img {
  max-width: 25rem;
  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
  border-radius: 4rem;
  width: 100%;
  margin: 1rem;
}

nav img {
  height: 2.5rem;
  margin-right:0.5rem;
}

#title {
  font-size: 1.4rem;
  font-weight: bold;
  width: max-content;
}

nav a {
  text-decoration: none;
  height:3.25rem;
  border-radius: 0.6rem;
  display: flex;
  align-items: center;
  padding-left:0.75rem;
  padding-right:0.75rem;
  color: black;
  box-sizing: content-box;
}

nav a:hover, #hamburger:hover {
  background-color: #C5DFF9;
}

nav a:active, #hamburger:active {
  background-color: #B1D5F9;
}

#hamburger {
  display: flex;
  height:3.25rem;
  align-self:center;
  width:3rem;
  font-size: 1rem;
  background-color: unset;
  border: none;
  border-radius: 0.6rem;
  cursor: pointer;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

#hamburger span {
  background-color: black;
  display: block;
  margin:0.15rem;
  width: 1.5rem;
  height: 0.2rem;
}

#menu-links {
  display: flex;
  flex-direction: row;
  margin:0;
  padding:0;
  justify-self:right;
}
nav li {
  list-style-type: none;
  margin-left: 0.5rem;
}

#content {
  max-width:60rem;
  margin: auto;
  margin-top:6rem;
  box-sizing: border-box;
  padding:1rem;
  align-items: flex;
}

h1 {
  font-size: 2rem;
  margin-bottom: 1.5rem;
  padding-bottom: 1.5rem;
  border-bottom: 0.0625rem solid #D7DBE0;
}

p {
  line-height: 200%;
}

#about-grid {
  grid-template-columns: 1fr 1fr 1fr;
  display: grid;
  grid-gap: 0.75rem;
}

.bio p {
  text-align: center;
}

.bio {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: baseline;
}

.bio img {
  width: 10rem;
  height: 10rem;
}

.missing-photo {
  padding-top:10rem;
}


@media (max-width: 60rem) { 
  nav label {
    display: flex;
    justify-self: right;
  }

  #about-grid {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    display: grid;
    grid-gap: 0.75rem;
  }


  #menu-links {
    display: none;
    grid-row-start: 2;
    grid-column-start: 2;
    grid-column-end: 2;
    flex-direction: column;
    justify-self: right;
    margin-top: 1rem;
    justify-content: right;
  }

  .proposals {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;
  }

  #chk1:checked ~ #menu-links {
    display: flex;
  }

  nav li {
    margin:0;
  }

  nav li a {
    display: flex;
    justify-content: right;
  }
}
@media (max-width: 30rem) { 
  nav img {
    display: none;
  }
}

